# yolov5x6-object-detection

./: CMakeLists.txt  Object Detector.cpp  README.md  main.cpp
